Fixed overflow of the paragraph text

--- a/css/style.css
+++ b/css/style.css
@@ -325,7 +325,7 @@ z-index: 4;
 .funders-text-mid p,
 .funders-text-bottom p {
    
-    width: 100%;
+    width: 90%;
     background-color: inherit;
     margin-left: 40px;
     margin-top: 20px;
